methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: not found: type Bool
    var surLaTrace:Bool = false ;
                   ^