methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  	var surLaTrace:Bool = false ;
    if(estFaceMur) return false;
  
  	avance ;
  	surLaTrace = (Color.green == getCouleurSol)
  	recule ;
  	return surLaTrace ;
}